--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/fontawesome.css" ,
+              "./node_modules/@fortawesome/fontawesome-free/css/solid.css",
               "src/styles.scss"
             ],
             "scripts": []
