--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "./node_modules/@fortawesome/fontawesome-free/css/fontawesome.css" ,
+              "./node_modules/@fortawesome/fontawesome-free/css/fontawesome.css",
               "./node_modules/@fortawesome/fontawesome-free/css/solid.css",
               "src/styles.scss"
             ],
@@ -130,5 +130,8 @@
       }
     }
   },
-  "defaultProject": "well-street"
+  "defaultProject": "well-street",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
