--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store": "^9.1.0",
     "@ngrx/store-devtools": "^9.1.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.25.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
